--- a/kubernetes/apps/default/spark/app/helmrelease.yaml
+++ b/kubernetes/apps/default/spark/app/helmrelease.yaml
@@ -25,12 +25,10 @@ spec:
       retries: 5
   values:
     controllers:
-      main:
-        type: statefulset
-        annotations:
-          reloader.stakater.com/auto: "true"
+      master:
+        type: Deployment
         containers:
-          main:
+          master:
             image:
               repository: docker.io/bitnami/spark
               tag: 3.5.0-debian-11-r17
@@ -42,6 +40,12 @@ spec:
               SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED: no
               SPARK_SSL_ENABLED: no
               SPARK_USER: spark
+        pod:
+          nodeSelector:
+            kubernetes.io/arch: amd64
+      worker:
+        type: DaemonSet
+        containers:
           worker:
             image:
               repository: docker.io/bitnami/spark
@@ -60,7 +64,12 @@ spec:
           nodeSelector:
             kubernetes.io/arch: amd64
     service:
-      main:
+      master:
+        # -- Override the name suffix that is used for this service
+        nameOverride: spark-master
+        # -- Provide additional labels which may be required.
+        labels:
+          app: spark-master
         ports:
           http:
             port: 8080
@@ -73,7 +82,11 @@ spec:
             port: 6066
             targetPort: 6066
       worker:
-        controller: main
+        # -- Override the name suffix that is used for this service
+        nameOverride: spark-worker
+        # -- Provide additional labels which may be required.
+        labels:
+          app: spark-worker
         ports:
           http:
             port: 8081
@@ -82,12 +95,12 @@ spec:
         enabled: true
         ingressClassName: internal
         hosts:
-          - host: &host "spark.${SECRET_DOMAIN}"
+          - host: &host "spark-master.${SECRET_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
                 service:
-                  name: main
+                  name: master
                   port: http
         tls:
           - hosts:
