--- a/kubernetes/apps/default/bitnami-spark/app/ingress.yaml
+++ b/kubernetes/apps/default/bitnami-spark/app/ingress.yaml
@@ -5,7 +5,6 @@ metadata:
   name: spark
   namespace: default
   annotations:
-    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
     hajimari.io/enable: "true"
     hajimari.io/icon: mdi:ip-network
 spec:
@@ -18,9 +17,9 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: spark-webui
+                name: spark
                 port:
-                  number: 8080
+                  number: 80
   tls:
     - hosts:
         - "spark.${SECRET_DOMAIN}"
