--- a/kubernetes/apps/default/spark/app/ingress.yaml
+++ b/kubernetes/apps/default/spark/app/ingress.yaml
@@ -17,7 +17,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: spark
+                name: spark-master-svc
                 port:
                   number: 80
   tls:
