--- a/kubernetes/apps/default/spark/app/kustomization.yaml
+++ b/kubernetes/apps/default/spark/app/kustomization.yaml
@@ -5,6 +5,6 @@ kind: Kustomization
 namespace: default
 resources:
   - ./helmrelease.yaml
-  - ./configs
+  - ./delta-configmap.yaml
   - ./ingress.yaml
 
