--- a/kubernetes/apps/default/sparknova/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sparknova/app/helmrelease.yaml
@@ -30,8 +30,8 @@ spec:
         containers:
           main:
             image:
-              repository: docker.io/spark
-              tag: 3.5.0-scala2.12-java17-python3-ubuntu
+              repository: docker.io/clarknova9/spark
+              tag: spark:3.5.0-delta
             env:
               SPARK_MODE: master
               SPARK_MASTER_PORT: "7077"
@@ -44,30 +44,30 @@ spec:
         pod:
           nodeSelector:
             kubernetes.io/arch: amd64
-      spark-worker:
-        type: statefulset
-        containers:
-          spark-worker:
-            image:
-              repository: docker.io/spark
-              tag: 3.5.0-scala2.12-java17-python3-ubuntu
-            ports:
-              - name: http
-                containerPort: 8080
-                protocol: TCP
-            env:
-              SPARK_MODE: worker
-              SPARK_MASTER_URL: spark://spark-master-svc:7077
-              SPARK_WORKER_MEMORY: 1G
-              SPARK_WORKER_CORES: "1"
-              SPARK_USER: spark
-              SPARK_WORKER_WEBUI_PORT: "8080"
-              SPARK_WORKER_OPTS: |
-                -Dspark.ui.reverseProxy=true
-                -Dspark.ui.reverseProxyUrl=https://spark.${SECRET_DOMAIN}
-        pod:
-          nodeSelector:
-            kubernetes.io/arch: amd64
+      # spark-worker:
+      #   type: statefulset
+      #   containers:
+      #     spark-worker:
+      #       image:
+      #         repository: docker.io/spark
+      #         tag: 3.5.0-scala2.12-java17-python3-ubuntu
+      #       ports:
+      #         - name: http
+      #           containerPort: 8080
+      #           protocol: TCP
+      #       env:
+      #         SPARK_MODE: worker
+      #         SPARK_MASTER_URL: spark://spark-master-svc:7077
+      #         SPARK_WORKER_MEMORY: 1G
+      #         SPARK_WORKER_CORES: "1"
+      #         SPARK_USER: spark
+      #         SPARK_WORKER_WEBUI_PORT: "8080"
+      #         SPARK_WORKER_OPTS: |
+      #           -Dspark.ui.reverseProxy=true
+      #           -Dspark.ui.reverseProxyUrl=https://spark.${SECRET_DOMAIN}
+      #   pod:
+      #     nodeSelector:
+      #       kubernetes.io/arch: amd64
     service:
       main:
         type: ClusterIP
@@ -84,17 +84,17 @@ spec:
             port: 7077
             targetPort: 7077
 
-      spark-worker:
-        controller: spark-worker
-        type: ClusterIP
-        # -- Override the name suffix that is used for this service
-        nameOverride: spark-worker
-        # -- Provide additional labels which may be required.
-        labels:
-          app: spark-worker
-        ports:
-          http:
-            port: 8080
+      # spark-worker:
+      #   controller: spark-worker
+      #   type: ClusterIP
+      #   # -- Override the name suffix that is used for this service
+      #   nameOverride: spark-worker
+      #   # -- Provide additional labels which may be required.
+      #   labels:
+      #     app: spark-worker
+      #   ports:
+      #     http:
+      #       port: 8080
     ingress:
       main:
         enabled: true
