--- a/kubernetes/apps/default/sparknova/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sparknova/app/helmrelease.yaml
@@ -32,6 +32,7 @@ spec:
             image:
               repository: docker.io/clarknova9/spark
               tag: 3.5.0-delta
+            command: ["$SPARK_HOME/sbin/start-master.sh"]
             env:
               SPARK_MODE: master
               SPARK_MASTER_PORT: "7077"
