--- a/kubernetes/apps/default/sparknova/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sparknova/app/helmrelease.yaml
@@ -32,8 +32,9 @@ spec:
             image:
               repository: docker.io/clarknova9/spark
               tag: 3.5.0-delta
-            command: ["/bin/sh", "-c"]
-            args: ["/opt/spark/bin/spark-class org.apache.spark.deploy.master.Master"]
+            command: ["/opt/spark/bin/spark-class org.apache.spark.deploy.master.Master"]
+            # command: ["/bin/sh", "-c"]
+            # args: ["/opt/spark/bin/spark-class org.apache.spark.deploy.master.Master"]
             env:
               SPARK_MODE: master
               SPARK_MASTER_PORT: "7077"
