--- a/kubernetes/apps/default/sparknova/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sparknova/app/helmrelease.yaml
@@ -45,7 +45,8 @@ spec:
                 -Dspark.ui.reverseProxyUrl=https://spark.${SECRET_DOMAIN}
         pod:
           nodeSelector:
-            kubernetes.io/arch: amd64
+            #kubernetes.io/arch: amd64
+            kubernetes.io/hostname: nuc11
       # spark-worker:
       #   type: statefulset
       #   containers:
