--- a/kubernetes/apps/default/sparknova/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sparknova/app/helmrelease.yaml
@@ -54,14 +54,14 @@ spec:
               repository: docker.io/clarknova9/spark
               tag: 3.5.0-delta
             imagePullPolicy: Always
-            command: ["/opt/spark/bin/spark-class","org.apache.spark.deploy.worker.Worker", "spark://spark-master-svc:7077"]
+            command: ["/opt/spark/bin/spark-class","org.apache.spark.deploy.worker.Worker", "spark://sparknova-spark-master-svc:7077"]
             ports:
               - name: http
                 containerPort: 8080
                 protocol: TCP
             env:
               SPARK_MODE: worker
-              SPARK_MASTER_URL: spark://spark-master-svc:7077
+              SPARK_MASTER_URL: spark://sparknova-spark-master-svc:7077
               SPARK_WORKER_MEMORY: 1G
               SPARK_WORKER_CORES: "1"
               SPARK_WORKER_WEBUI_PORT: "8080"
