--- a/kubernetes/apps/default/sparknova/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sparknova/app/helmrelease.yaml
@@ -74,7 +74,11 @@ spec:
             kubernetes.io/hostname: aurora
     service:
       main:
-        type: ClusterIP
+        annotations:
+          io.cilium/lb-ipam-ips: "192.168.2.100"
+        externalTrafficPolicy: Cluster
+        type: LoadBalancer
+        #type: ClusterIP
         # -- Override the name suffix that is used for this service
         nameOverride: spark-master-svc
         # -- Provide additional labels which may be required.
