--- a/kubernetes/apps/default/sparknova/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sparknova/app/helmrelease.yaml
@@ -140,7 +140,7 @@ spec:
     persistence:
       config-file:
         type: configMap
-        name: spark-configmap
+        name: spark-config
         globalMounts:
           - path: /opt/spark/spark-defaults.conf
             subPath: spark-defaults.conf
