--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -10,6 +10,8 @@ stringData:
     SECRET_DOMAIN2: ENC[AES256_GCM,data:lXMyBiRmRaxB5X0=,iv:qKl1Fukhy4k8tnRbhKd2ABpmcwFJcYNGIPnPiIMSRyM=,tag:3Hkk0IT+JiaZtBhuKdwUNQ==,type:str]
     SECRET_MINIO_ACCESS_KEY: ENC[AES256_GCM,data:YobnYGq28VBmv/81VkftjRe1KtGS3sB/JYkBZDSPb92t12jLh6+jPQ==,iv:BniFQjcWbaXt6HfXTyBXI/spzAao2oKPpoQhmswu5ms=,tag:ifbBnh5+zShujoTHGf6bNQ==,type:str]
     SECRET_MINIO_SECRET_KEY: ENC[AES256_GCM,data:ydnue3KL+1DYwDPjLa1MipvQUyc=,iv:eVPL2b6/BHni+RHpOAP0KLNZmeiRPl1GEF+uCVopJx4=,tag:fI2tg68ozAtVupdTiaEkrg==,type:str]
+    SECRET_SPARKMINIO_ACCESS_KEY: ENC[AES256_GCM,data:eHXtMR2DynfDomGHKvLab9mxXWo=,iv:+rRqJR7+xubBCXX/NN1IB0zEPqMOo1oiLrSKNJE2xYc=,tag:FE2IBOGz30aYcwfqfVMAug==,type:str]
+    SECRET_SPARKMINIO_SECRET_KEY: ENC[AES256_GCM,data:ibKJqWeeJ5B125peVnJ4xKsN2rEnbrBi07u+0x+6Kanreys8rG6SQw==,iv:4gzwQCpidZXXMiljxgstb9wQJhEfXXXaRd/OumhhIuw=,tag:zXaj0AeitTNJ8nI1jslpaA==,type:str]
     SECRET_JUPYTERHUB_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:MblAjHT0T7AUkBiUUSNrThQWYaeUW98JfbpSjuo19tUUCnoP+ue14ELPunp+EuKUHNsq88UDOie/Uf318iQykw==,iv:GJ/UWWYK9QpjIacJMdVAo1tckDzuCgFQqVAtTgRHD1Y=,tag:EkdCwmflyb97w7a2jZrdQQ==,type:str]
     SECRET_GRAFANA_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:pmmt8CJM5j9lCRXB/6xTu3utfGJesT8LzF6LwiBlqABijadUE13otqq9AaiM8cPrq02uqv5WovZ/W/KH1xgU9A==,iv:6OkeJ4dWGJnD+oA4QUsYVbgk/RYr/Lig74vb0c4TOL8=,tag:oNX0Z4W4S/EOePotWqa3MA==,type:str]
     SECRET_MINIO_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:5vWLyjuswwBdVa+w20ZfEdRFUDeoEBvE1uhsn4bS/O2puqgZHvW+nGMQ3l6cTYS4fB8UQsm4ADZRj/w4Nl6Ang==,iv:/nZd8mDfvGD6a+L9U5hLw3Y8ld5ln8vjXYB00AtT1aI=,tag:XJ0Eazl3TSsjtMQHlIhNsQ==,type:str]
@@ -36,8 +38,8 @@ sops:
             R2xXNGtONGEvYi96dXllV3RhUWY3cGMK8OHJUKYrQvMBbo+BxPmZFZAjFaHh89pg
             sPrhY2Ezs+IzzrH00SnyQuPM4aeT3ykWBDd6tzm/Ooo/S0JBI21j+Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-18T18:48:18Z"
-    mac: ENC[AES256_GCM,data:3e5T8zgV8g312ZJH8vWPk8vTebnE2QJL2a2ZnyNX7jGqMuSGavprpQso+WvNMZSiGw2GFWxBmTyjeqGS2DpaakLlyoZ57bzVw5/kNaIaJBB1GVrdlhTv10UNO2CgshGZIuPtsCuSqq95qtUwTL6UBnlEK01UnwoSC2IYKlPVgyI=,iv:jW8y8YOEw8Zt7FmeZMOTtWsd343PyJrHrVfXkHd4quU=,tag:OTmW77D2UcCcgtOWeTriaQ==,type:str]
+    lastmodified: "2023-12-30T21:16:48Z"
+    mac: ENC[AES256_GCM,data:XAgFo5xmVmKsz+8RpnENH19iEHQYp3gR8aK6/0B8PvGKchB5RSh9tN1rUwiGAinJACZQeURSylt78N6p16Ni4ZYxvykmmq21KMF77jqQLT8AmFsFz/Q87MyjAfOYxhG+6phA6kiHreG7JxWinc29FGK46RKn4eLX8KALgsraGRM=,iv:ca5h8bETzi1x5F9U1aKfeRk0pPqwZQ5ThLdcv3mq920=,tag:/TioMj/1mWcqzMtXQKBV1g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
