--- a/kubernetes/apps/default/sparknova/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sparknova/app/helmrelease.yaml
@@ -73,7 +73,7 @@ spec:
         pod:
           nodeSelector:
             kubernetes.io/arch: amd64
-            #kubernetes.io/hostname: nuc11
+            kubernetes.io/hostname: nuc11
       spark-worker:
         type: statefulset
         replicas: 2
@@ -100,7 +100,7 @@ spec:
         pod:
           nodeSelector:
             kubernetes.io/arch: amd64
-            #kubernetes.io/hostname: aurora
+            kubernetes.io/hostname: aurora
       # kyuubi:
       #   type: statefulset
       #   containers:
