--- a/kubernetes/apps/default/sparknova/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sparknova/app/helmrelease.yaml
@@ -150,7 +150,9 @@ spec:
           app: jupyter-svc
         ports:
           jupyter:
+            protocol: TCP
             port: 8888
+            targetPort: 8888
       # kyuubi:
       #   annotations:
       #     io.cilium/lb-ipam-ips: "192.168.2.102"
